<resources>
    <string name="app_name">I Sell Here!</string>

    <!-- Toolbar Titles -->
    <string name="title_activity_registration">Create a New Account!</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_content">ContentActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_main2">Main2Activity</string>

    <!-- Success Messages -->
    <string name="registration_successful_msg">Congratulations! Your account is ready to be used!</string>
    <string name="changepassword_successful_msg">Congratulations! You have changed your password!</string>

    <!-- Login -->
    <string name="title_activity_login">Login On I Sell Here!"</string>
    <string name="new_to_i_sell_here">New to I Sell Here!?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>

    <!-- Login and Registration -->
    <string name="username">Username</string>
    <string name="password">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Point of Sale -->

    <string name="editPSButton">Edit</string>
    <string name="deletePSButton">Delete</string>
    <string name="namePSText">Name:</string>
    <string name="evaluationPSText">Evaluation:</string>
    <string name="descriptionPSText">Description:</string>
    <string name="pSName">name</string>
    <string name="pSEvaluation">evaluation</string>
    <string name="evaluationPSButton">Evaluations</string>

    <!-- Edit Point of Sale -->

    <string name="saveButtonText">Save</string>
    <string name="editPSNameTextView">Name:</string>
    <string name="editEvaluationPSTextView">Evaluation:</string>
    <string name="descriptionPSTextView">Description: </string>
    <string name="editPSImageButton"><u>Send an Image</u></string>

    <!-- Evaluations -->

    <string name="commentEButton">Comment</string>

    <!-- My Evaluation -->

    <string name="evaluationTextView">Send your evaluation:</string>
    <string name="commentTextView">Comment:</string>
    <string name="commentEditText" />
    <string name="sendButton">Send</string>
    <string name="messageTextView">Confirme sua senha:</string>
    <string name="passwordTextView">Password:</string>
    <string name="confirmButton">Confirm</string>

    <!-- Product -->

    <string name="editProductButton">Edit</string>
    <string name="deleteProductButton">Delete</string>
    <string name="productEvaluationsButton">Evaluations</string>
    <string name="nameProductText">Name:</string>
    <string name="priceProductText">Price:</string>
    <string name="evaluationsProductText">Evaluations:</string>
    <string name="descriptionsProductText">Description:</string>
    <string name="nameProduct">name</string>
    <string name="priceProduct">price</string>
    <string name="evaluationProduct">evaluation</string>
    <string name="label_searchable">searchable</string>

    <!-- Edit Product -->

    <string name="editProductImagemButton"><u>Send an Image</u></string>
    <string name="editProductNameTextView">Name:</string>
    <string name="editPriceProductTextView">Price:</string>
    <string name="editDescriptionProductTextView">Description:</string>
    <string name="saveButtonEditProduct">Save</string>

</resources>
