<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my_evaluation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.grupoes.projetoes.activities.MyEvaluationActivity">

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="73dp"
        android:id="@+id/ratingBar"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="22dp"
        android:id="@+id/evaluationTextView"
        tools:text="@string/evaluationTextView"
        style="@style/InputInfoText"/>

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ratingBar"
        android:layout_alignStart="@+id/evaluationTextView"
        android:layout_marginTop="67dp"
        android:id="@+id/commentTextView"
        tools:text="@string/commentTextView"
        style="@style/InputInfoText"/>

    <EditText
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/commentTextView"
        android:layout_alignStart="@+id/commentTextView"
        android:layout_marginTop="19dp"
        android:id="@+id/commentEditText"
        tools:text="@string/commentEditText"
        android:layout_width="310sp"
        android:layout_height="160sp" />

    <Button
        android:text="@string/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/sendButton"
        style="@style/formButton"/>
</RelativeLayout>
