<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_delete_point_of_sale"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.grupoes.projetoes.activities.DeletePointOfSaleActivity">

    <EditText
        android:layout_width="130sp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/password"
        android:layout_height="25sp"
        android:layout_alignBottom="@+id/passwordTextView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:id="@+id/passwordTextView"
        tools:text="@string/passwordTextView"
        android:layout_below="@+id/messageTextView"
        android:layout_alignStart="@+id/messageTextView"
        style="@style/InputInfoText"/>

    <Button
        android:text="@string/confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp"
        android:id="@+id/confirmButton"
        style="@style/formButton"/>

    <TextView
        android:text="@string/messageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:id="@+id/messageTextView"
        style="@style/InputInfoText"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/confirmButton" />
</RelativeLayout>
