<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_point_of_sale"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.grupoes.projetoes.activities.EditPointOfSaleActivity">

    <Button
        android:text="@string/saveButtonText"
        android:layout_width="80sp"
        android:layout_height="50sp"
        android:layout_marginEnd="13dp"
        android:layout_marginTop="21dp"
        android:id="@+id/saveButtonEditPS"
        style="@style/formButton"
        android:layout_below="@+id/edit_pos_image_view"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="128sp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editNamePSText"
        android:layout_alignBottom="@+id/editPSNameTextView"
        android:layout_toEndOf="@+id/editPSNameTextView"
        android:layout_marginStart="25sp"
        android:textSize="12sp"
        android:layout_height="33sp" />

    <TextView
        android:text="@string/descriptionPSTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/descriptionPSTextView"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_margin="15sp"
        style="@style/InputInfoText"/>

    <Button
        android:text="@string/editPSImageButton"
        android:layout_width="90sp"
        android:id="@+id/editPSImageButton"
        style="@style/formButton"
        android:layout_height="60sp"
        android:layout_alignTop="@+id/edit_pos_image_view"
        android:layout_alignEnd="@+id/saveButtonEditPS"
        android:layout_marginTop="31dp" />

    <EditText
        android:layout_width="128sp"
        android:layout_height="33sp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editEvaluationPSText"
        android:layout_above="@+id/descriptionPSTextView"
        android:layout_toEndOf="@+id/descriptionPSTextView"
        android:textSize="12sp"/>

    <EditText
        android:layout_width="128sp"
        android:layout_height="33sp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editDescripptionPSText"
        android:textSize="12sp"
        android:layout_alignBaseline="@+id/descriptionPSTextView"
        android:layout_alignBottom="@+id/descriptionPSTextView"
        android:layout_toStartOf="@+id/editPSImageButton" />

    <TextView
        android:text="@string/editEvaluationPSTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editEvaluationPSTextView"
        style="@style/InputInfoText"
        android:layout_alignBottom="@+id/saveButtonEditPS"
        android:layout_alignStart="@+id/descriptionPSTextView" />

    <TextView
        android:text="@string/editPSNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editPSNameTextView"
        style="@style/InputInfoText"
        android:layout_alignTop="@+id/saveButtonEditPS"
        android:layout_alignStart="@+id/editEvaluationPSTextView" />

    <ImageView
        android:layout_width="168sp"
        android:layout_height="128sp"
        app:srcCompat="@drawable/cast_abc_scrubber_control_off_mtrl_alpha"
        android:id="@+id/edit_pos_image_view"
        android:layout_marginLeft="15sp"
        android:background="@android:drawable/ic_menu_camera"
        android:adjustViewBounds="false"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/editPSNameTextView" />

</RelativeLayout>
